2007-12-02  Glenn Morris  <rgm@gnu.org>

	* mail/binhex.el: Move here from gnus/.
	(binhex): New custom group.
	(binhex-decoder-program, binhex-decoder-switches)
	(binhex-use-external): Move to the binhex custom group.

	* mail/uudecode.el: Move here from gnus/.
	(uudecode): New custom group.
	(uudecode-decoder-program, uudecode-decoder-switches)
	(uudecode-use-external): Move to the uudecode custom group.

	* net/netrc.el (top-level): Don't load `encrypt' features.
	(netrc-parse): Don't use encrypt.
	(netrc-find-service-name, netrc-find-service-number): Don't use caddr.

2007-12-02  Agustin Martin  <agustin.martin@hispalinux.es>

	* textmodes/flyspell.el (flyspell-large-region): Explicitly set
	encoding for aspell process and for communication with it.
	Only add "-d" option if not already present.
	Use ispell-current-dictionary and ispell-current-personal-dictionary.
	General reorganization.

	* textmodes/ispell.el (ispell-aspell-find-dictionary): Do not set
	encoding here.
	(ispell-start-process): Explicitly set encoding here if using aspell.

2007-12-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* pcvs.el (cvs-mode-commit, cvs-mode-edit-log): Also pass a diff
	function to log-edit.

2007-12-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el: New file.

2007-12-02  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-lang-slash-idiv, calc-lang-allow-underscores)
	(calc-lang-c-type-hex, calc-lang-brackets-are-subscripts)
	(calc-lang-parens-are-subscripts): New variables.
	(math-expr-special-function-mapping): Remove variable.
	(math-eqn-ignore-words, math-tex-ignore-words)
	(math-latex-ignore-words): Move to calc-lang.el.

	* calc/calc-lang.el (math-compose-vector, math-compose-var)
	(math-tex-expr-is-flat): Declare as functions.
	(calc-lang-slash-idiv, calc-lang-allow-underscores)
	(math-comp-left-bracket, math-comp-right-bracket)
	(math-comp-comma, math-comp-vector-prec): Declare as variables.
	(math-var-formatter, math-matrix-formatter)